WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85311
Physijs demo crashes due to DFG not updating topCallFrame correctly.
https://bugs.webkit.org/show_bug.cgi?id=85311
Summary
Physijs demo crashes due to DFG not updating topCallFrame correctly.
Oliver Hunt
Reported
2012-05-01 14:26:40 PDT
Physijs demo crashes due to DFG not updating topCallFrame correctly.
Attachments
Patch
(7.46 KB, patch)
2012-05-01 14:29 PDT
,
Oliver Hunt
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2012-05-01 14:29:24 PDT
Created
attachment 139682
[details]
Patch
Oliver Hunt
Comment 2
2012-05-01 14:34:02 PDT
Committed
r115750
: <
http://trac.webkit.org/changeset/115750
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug